--- a/industryinc/about.html
+++ b/industryinc/about.html
@@ -163,7 +163,7 @@
               <img src="img/icons/phone.png" alt="" class="" />
             </div>
             <div class="hib-text">
-              <h6>+91 9839837999</h6>
+              <h6>+91 8299638409</h6>
               <p>info@saaswad.com</p>
             </div>
           </div>
@@ -565,7 +565,7 @@
                 </div>
                 <div class="fib-text">
                   <p>
-                    +91 9839837999<br />
+                    +91 8299638409<br />
                     info@saaswad.com
                   </p>
                 </div>
@@ -641,7 +641,7 @@
         });
       });
     </script>
-    <script type="text/JavaScript">
+    <!-- <script type="text/JavaScript">
       //Script courtesy of BoogieJack.com
       var message="NoRightClicking";
       function defeatIE() {if (document.all) {(message);return false;}}
@@ -652,6 +652,6 @@
       {document.captureEvents(Event.MOUSEDOWN);document.onmousedown=defeatNS;}
       else{document.onmouseup=defeatNS;document.oncontextmenu=defeatIE;}
       document.oncontextmenu=new Function("return false")
-    </script>
+    </script> -->
   </body>
 </html>
