--- a/industryinc/blog.html
+++ b/industryinc/blog.html
@@ -229,7 +229,7 @@
               <img src="img/icons/phone.png" alt="" class="" />
             </div>
             <div class="hib-text">
-              <h6>+91 9839837999</h6>
+              <h6>+91 8299638409</h6>
               <p>info@saaswad.com</p>
             </div>
           </div>
@@ -417,13 +417,14 @@
       </div>
     </div>
   </section> -->
-
+<section id="products" >
     <section class="reserch-section1 spad">
       <div class="container">
         <div class="row">
           <div class="col-lg-4">
             <ul class="nav nav-tabs reserch-tab-menu" role="tablist">
               <h2 style="color: Black; margin-bottom: 20px;">
+
                 <center>MANUFACTURING FACILITIES</center>
               </h2>
               <li class="nav-item" >
@@ -729,6 +730,7 @@
         </div>
       </div>
     </section>
+  </section>
 
     <!-- <2nd one 697-1001 > -->
 
@@ -1229,7 +1231,7 @@
                 </div>
                 <div class="fib-text">
                   <p>
-                    +91 9839837999<br />
+                    +91 8299638409<br />
                     info@saaswad.com
                   </p>
                 </div>
