--- a/industryinc/coorporate_office.html
+++ b/industryinc/coorporate_office.html
@@ -115,7 +115,7 @@
               <img src="img/icons/phone.png" alt="" class="" />
             </div>
             <div class="hib-text">
-              <h6>+91 9839837999</h6>
+              <h6>+91 8299638409</h6>
               <p>info@saaswad.com</p>
             </div>
           </div>
@@ -192,6 +192,16 @@
       <div class="container">
         <div class="map-info">
           <center><img src="img/logo_saswad.png" height="50" alt="" /></center>
+          <p>
+            <ul class="text-white">
+
+              <li>  40 mins ( 26 km ) from Varanasi International Airport.</li>
+              <li>  Located 2 km from the city centre.</li>
+              <li>  5 mins ( 1 km ) drive from Banaras Railway Station.</li>
+              <li>	Located in Mahmoorganj, Varanasi.  </li>
+
+            </ul>
+          </p>
         </div>
       </div>
       <div class="map">
@@ -205,6 +215,7 @@
           aria-hidden="false"
           tabindex="0"
         ></iframe>
+
       </div>
     </div>
 
@@ -216,7 +227,7 @@
         <!-- <img src="img/video-box.jpg" alt="" width="75%" height="75%" /> -->
         <div class="member-info">
 
-         <img src="img/video-box.jpg" alt="" width="75%" height="75%" />
+         <img src="img/coorporate1.PNG" alt="" width="90%" height="90%" />
 
         </div>
       </div>
@@ -225,7 +236,7 @@
       <div class="team-member">
         <!-- <img src="img/video-box.jpg" alt="" width="75%" height="75%" /> -->
         <div class="member-info">
-          <img src="img/video-box.jpg" alt="" width="75%" height="75%" />
+          <img src="img/coorporate2.PNG" alt="" width="90%" height="90%" />
           <!-- <a href="#" class="site-btn">See C.V.</a> -->
         </div>
       </div>
@@ -234,206 +245,15 @@
       <div class="team-member">
 
         <div class="member-info">
-          <img src="img/video-box.jpg" alt="" width="75%" height="75%" />
+          <img src="img/coorporate3.PNG" alt="" width="90%" height="90%" />
           <!-- <a href="#" class="site-btn">See C.V.</a> -->
         </div>
       </div>
     </div>
   </div>
   <br >
-  </br>
+  <br>
 
-
-
-     <!-- Footer section  -->
-    <div class="footer-buttom">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 order-1 order-lg-2 p-0">
-            <ul class="footer-menu text-center">
-              <li><a href="index.html">Home</a></li>
-              <li class="active"><a href="about.html">About us</a></li>
-              <li><a href="solutions.php">Products</a></li>
-              <li><a href="blog.html">Facilities</a></li>
-              <li><a href="contact.php">Contact</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-    <footer class="footer-section spad">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3 col-md-6">
-            <div class="footer-widget">
-              <div style="margin-bottom: 25px;">
-                <img
-                  src="img/logo_saswadw.png"
-                  style="margin-right: 5px;"
-                  height="30"
-                  alt=""
-                />
-                <span class="fw-title">Saaswad</span>
-              </div>
-              <p>
-                We introduce ourselves as one of the Leading Manufacturers of
-                Industrial Radiators, Oil Coolers, Heat Exchangers and Charged
-                Air Coolers in India. We are known for manufacturing quality
-                products and providing complete solutions through technical
-                expertise and after-sales service to our customers.
-              </p>
-              <div class="footer-social">
-                <a href="mailto: info@saaswad.com"
-                  ><i class="fa fa-envelope"></i
-                ></a>
-                <a href=""><i class="fa fa-linkedin"></i></a>
-                <!-- <a href=""><i class="fa fa-dribbble"></i></a>
-                <a href=""><i class="fa fa-behance"></i></a> -->
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="footer-widget">
-              <h2 class="fw-title">Our Products</h2>
-              <ul>
-                <li>
-                  <a class="hover1" href="./radiator.html"> Radiators</a>
-                </li>
-                <li>
-                  <a class="hover1" href="./mradiator.html"
-                    >Mechanically Bonded Radiators</a
-                  >
-                </li>
-                <li>
-                  <a class="hover1" href="./acooler.html"
-                    >Radiator, Oil cooler and AfterCoolers Assembly</a
-                  >
-                </li>
-                <li>
-                  <a class="hover1" href="./tacooler.html"
-                    >Turbo After Cooler</a
-                  >
-                </li>
-                <!-- <li><a href="">Oil Extractions</a></li>
-                <li><a href="">About our Work</a></li> -->
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="footer-widget">
-              <h2 class="fw-title">Our Facilities</h2>
-              <ul>
-                <li>
-                  <a class="hover1" href="./unit3.html">Varanasi Unit</a>
-                </li>
-                <li>
-                  <a class="hover1" href="./unit4.html">Pune Unit</a>
-                </li>
-                <li>
-                  <a class="hover1" href="./coorporate_office.html"
-                    >Coorporate Ofiice</a
-                  >
-                </li>
-                <!-- <li><a href="">Oil Extractions</a></li>
-                <li><a href="">About our Work</a></li> -->
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-7">
-            <div class="footer-widget">
-              <h2 class="fw-title">Contact Us</h2>
-              <div class="footer-info-box">
-                <div class="fib-icon">
-                  <img src="img/icons/map-marker.png" alt="" class="" />
-                </div>
-                <div class="fib-text">
-                  <p>
-                    B-38/47 PR,Tulsipur<br />
-                    Mahmoorganj,Varanasi Uttar Pradesh,India-221010
-                  </p>
-                </div>
-              </div>
-              <div class="footer-info-box">
-                <div class="fib-icon">
-                  <img src="img/icons/phone.png" alt="" class="" />
-                </div>
-                <div class="fib-text">
-                  <p>
-                    +91 9839837999<br />
-                    info@saaswad.com
-                  </p>
-                </div>
-              </div>
-              <!-- <form class="footer-search">
-                <input type="text" placeholder="Search" />
-                <button><i class="fa fa-search"></i></button>
-              </form> -->
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="footer-buttom">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4 order-2 order-lg-1 p-0">
-              <div class="copyright">
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                Copyright &copy;
-                <script>
-                  document.write(new Date().getFullYear());
-                </script>
-                | Saaswad Heat Transfer Private Limited
-              </div>
-            </div>
-            <div class="col-lg-7 order-1 order-lg-2 p-0">
-              <ul class="footer-menu">
-                <li>
-                  <a class="hover1" href="http://technoborg.in/">Team Technoborg<sup>&copy;</sup></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
-    <!-- Footer section end -->
-
-    <!-- Search model -->
-    <div class="search-model">
-      <div class="h-100 d-flex align-items-center justify-content-center">
-        <div class="search-close-switch">+</div>
-        <form class="search-model-form">
-          <input type="text" id="search-input" placeholder="Search here....." />
-        </form>
-      </div>
-    </div>
-    <!-- Search model end -->
-
-    <!--====== Javascripts & Jquery ======-->
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.slicknav.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/circle-progress.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/main.js"></script>
-
-    <script>
-      $(document).ready(function () {
-        $(window).scroll(function () {
-          if ($(this).scrollTop() > 100) {
-            $("#scroll").fadeIn();
-          } else {
-            $("#scroll").fadeOut();
-          }
-        });
-        $("#scroll").click(function () {
-          $("html, body").animate({ scrollTop: 0 }, 600);
-          return false;
-        });
-      });
-    </script>
-    <script type="text/JavaScript">
 //Script courtesy of BoogieJack.com
 var message="NoRightClicking";
 function defeatIE() {if (document.all) {(message);return false;}}
