--- a/industryinc/unit3.html
+++ b/industryinc/unit3.html
@@ -117,7 +117,7 @@
               <img src="img/icons/phone.png" alt="" class="" />
             </div>
             <div class="hib-text">
-              <h6>+91 9839837999</h6>
+              <h6>+91 8299638409</h6>
               <p>info@saaswad.com</p>
             </div>
           </div>
@@ -213,7 +213,7 @@
           <!--<img src="img/video-box.jpg" alt="" width="75%" height="75%" /> -->
           <div class="member-info">
 
-          <img src="img/video-box.jpg" alt="" width="75%" height="75%" />
+          <img src="img/varanasi1.PNG" alt="" width="100%" height="100%" />
 
           </div>
         </div>
@@ -222,7 +222,7 @@
         <div class="team-member">
           <!--<img src="img/video-box.jpg" alt="" width="75%" height="75%" /> -->
           <div class="member-info">
-           <img src="img/video-box.jpg" alt="" width="75%" height="75%" />
+           <img src="img/varanasi2.PNG" alt="" width="100%" height="100%" />
             <!-- <a href="#" class="site-btn">See C.V.</a> -->
           </div>
         </div>
@@ -231,7 +231,7 @@
         <div class="team-member">
 
           <div class="member-info">
-           <img src="img/video-box.jpg" alt="" width="75%" height="75%" />
+           <img src="img/varanasi3.PNG" alt="" width="100%" height="100%" />
             <!-- <a href="#" class="site-btn">See C.V.</a> -->
           </div>
         </div>
@@ -368,7 +368,7 @@
                 </div>
                 <div class="fib-text">
                   <p>
-                    +91 9839837999<br />
+                    +91 8299638409<br />
                     info@saaswad.com
                   </p>
                 </div>
