--- a/industryinc/unit4.html
+++ b/industryinc/unit4.html
@@ -115,7 +115,7 @@
               <img src="img/icons/phone.png" alt="" class="" />
             </div>
             <div class="hib-text">
-              <h6>+91 9839837999</h6>
+              <h6>+91 8299638409</h6>
               <p>info@saaswad.com</p>
             </div>
           </div>
@@ -187,6 +187,15 @@
       <div class="container">
         <div class="map-info">
           <center><img src="img/logo_saswad.png" height="50" alt="" /></center>
+          <p>
+            <ul class="text-white">
+
+              <li>  45 min drive to Airport ( 28 km ) </li>
+              <li>  1 hr to nearest railway station </li>
+              <li>  Located in Industrial area in Chakan ,Pune </li>
+              <li>	State of the art testing facility   </li>
+
+            </ul>
         </div>
       </div>
       <div class="map">
@@ -218,7 +227,7 @@
         <div class="team-member">
           <!-- <img src="img/team/1.jpg" alt="" /> -->
           <div class="member-info">
-            <img src="img/video-box.jpg" alt="" width="75%" height="75%" />
+           <img src="img/pune1.PNG" alt="" width="100%" height="100%" />
           </div>
         </div>
       </div>
@@ -226,7 +235,7 @@
         <div class="team-member">
           <!-- <img src="img/team/1.jpg" alt="" /> -->
           <div class="member-info">
-            <img src="img/video-box.jpg" alt="" width="75%" height="75%" />
+             <img src="img/pune2.PNG" alt="" width="100%" height="100%" />
             <!-- <a href="#" class="site-btn">See C.V.</a> -->
           </div>
         </div>
@@ -234,7 +243,7 @@
       <div class="col-md-4">
         <div class="team-member">
           <div class="member-info">
-            <img src="img/video-box.jpg" alt="" width="75%" height="75%" />
+             <img src="img/pune3.PNG" alt="" width="100%" height="100%" />
             <!-- <a href="#" class="site-btn">See C.V.</a> -->
           </div>
         </div>
@@ -358,7 +367,7 @@
                 </div>
                 <div class="fib-text">
                   <p>
-                    +91 9839837999<br />
+                    +91 8299638409<br />
                     info@saaswad.com
                   </p>
                 </div>
