--- a/industryinc/coorporate_office.html
+++ b/industryinc/coorporate_office.html
@@ -262,9 +262,9 @@
     </div>
   </div>
   <br >
-<<<<<<< HEAD
+
   <br>
-=======
+
   </br>
 
 
@@ -441,18 +441,19 @@
     <script src="js/circle-progress.min.js"></script>
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/main.js"></script>
->>>>>>> c73037e8e2d6dd0b02d8aa189eff584a96d197be
 
-//Script courtesy of BoogieJack.com
-var message="NoRightClicking";
-function defeatIE() {if (document.all) {(message);return false;}}
-function defeatNS(e) {if
-(document.layers||(document.getElementById&&!document.all)) {
-if (e.which==2||e.which==3) {(message);return false;}}}
-if (document.layers)
-{document.captureEvents(Event.MOUSEDOWN);document.onmousedown=defeatNS;}
-else{document.onmouseup=defeatNS;document.oncontextmenu=defeatIE;}
-document.oncontextmenu=new Function("return false")
-</script>
+
+     <script type="text/JavaScript">
+      //Script courtesy of BoogieJack.com
+      var message="NoRightClicking";
+      function defeatIE() {if (document.all) {(message);return false;}}
+      function defeatNS(e) {if
+      (document.layers||(document.getElementById&&!document.all)) {
+      if (e.which==2||e.which==3) {(message);return false;}}}
+      if (document.layers)
+      {document.captureEvents(Event.MOUSEDOWN);document.onmousedown=defeatNS;}
+      else{document.onmouseup=defeatNS;document.oncontextmenu=defeatIE;}
+      document.oncontextmenu=new Function("return false")
+    </script>
   </body>
 </html>
