--- a/industryinc/about.html
+++ b/industryinc/about.html
@@ -408,7 +408,7 @@
     <!-- Milestones section end -->
 
     <!-- Team section -->
-    <section class="about-section spad">
+    <section class="about-section spad" style="background-color: antiquewhite">
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
@@ -526,7 +526,7 @@
                   >
                 </li>
                 <li>
-                  <a class="hover1" href="./tacooler.php">Turbo After Cooler</a>
+                  <a class="hover1" href="./tacooler.php">Charged Air Cooler</a>
                 </li>
                 <!-- <li><a href="">Oil Extractions</a></li>
                 <li><a href="">About our Work</a></li> -->
