--- a/industryinc/index.html
+++ b/industryinc/index.html
@@ -240,7 +240,10 @@
                   <h5>
                     We introduce ourselves as one of the Leading Manufacturers
                     of Industrial Radiators, Oil Coolers, Heat Exchangers and
-                    Charged Air Coolers in India.
+                    Charged Air Coolers in India. We are known for manufacturing
+                    quality products and providing complete products through
+                    technical expertise and after-sales service to our
+                    customers.
                   </h5>
                 </div>
                 <!-- <p>
@@ -663,7 +666,7 @@
                   >
                 </li>
                 <li>
-                  <a class="hover1" href="./tacooler.php">Turbo After Cooler</a>
+                  <a class="hover1" href="./tacooler.php">Charged Air Cooler</a>
                 </li>
                 <!-- <li><a href="">Oil Extractions</a></li>
                 <li><a href="">About our Work</a></li> -->
