--- a/industryinc/unit4.html
+++ b/industryinc/unit4.html
@@ -198,15 +198,13 @@
       <div class="container">
         <div class="map-info">
           <center><img src="img/logo_saswad.png" height="50" alt="" /></center>
-          <p>
-            <ul class="text-white">
-
-              <li>  45 min drive to Airport ( 28 km ) </li>
-              <li>  1 hr to nearest railway station </li>
-              <li>  Located in Industrial area in Chakan ,Pune </li>
-              <li>	State of the art testing facility   </li>
-
-            </ul>
+          <p></p>
+          <ul class="text-white">
+            <li>45 min drive to Airport ( 28 km )</li>
+            <li>1 hr to nearest railway station</li>
+            <li>Located in Industrial area in Chakan ,Pune</li>
+            <li>State of the art testing facility</li>
+          </ul>
         </div>
       </div>
       <div class="map">
@@ -238,7 +236,7 @@
         <div class="team-member">
           <!-- <img src="img/team/1.jpg" alt="" /> -->
           <div class="member-info">
-           <img src="img/pune1.PNG" alt="" width="100%" height="100%" />
+            <img src="img/pune1.PNG" alt="" width="100%" height="100%" />
           </div>
         </div>
       </div>
@@ -246,7 +244,7 @@
         <div class="team-member">
           <!-- <img src="img/team/1.jpg" alt="" /> -->
           <div class="member-info">
-             <img src="img/pune2.PNG" alt="" width="100%" height="100%" />
+            <img src="img/pune2.PNG" alt="" width="100%" height="100%" />
             <!-- <a href="#" class="site-btn">See C.V.</a> -->
           </div>
         </div>
@@ -254,7 +252,7 @@
       <div class="col-md-4">
         <div class="team-member">
           <div class="member-info">
-             <img src="img/pune3.PNG" alt="" width="100%" height="100%" />
+            <img src="img/pune3.PNG" alt="" width="100%" height="100%" />
             <!-- <a href="#" class="site-btn">See C.V.</a> -->
           </div>
         </div>
@@ -329,7 +327,7 @@
                   >
                 </li>
                 <li>
-                  <a class="hover1" href="./tacooler.php">Turbo After Cooler</a>
+                  <a class="hover1" href="./tacooler.php">Charged Air Cooler</a>
                 </li>
                 <!-- <li><a href="">Oil Extractions</a></li>
                 <li><a href="">About our Work</a></li> -->
