main and about done

--- a/industryinc/about.html
+++ b/industryinc/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
-    <title>Saaswad Heat Transfer And Engineering Pvt Ltd</title>
+    <title>About Us | Saaswad Heat Transfer And Engineering</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
@@ -17,7 +17,7 @@
       gtag("config", "UA-96171225-3");
     </script>
     <meta charset="UTF-8" />
-    <meta name="description" content="SAASWAD.com" />
+    <meta name="description" content="We are one of the leading manufacturers of industrial radiators, oil coolers, heat exchangers and charged air coolers in india. We manufacture quality products." />
     <meta name="keywords" content="industry, html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -48,6 +48,13 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <style>
+      .team-text h1 {
+    font-weight: 300;
+    margin-bottom: 40px;
+}
+h1 {
+    font-size: 38px;
+}
       #scroll {
         z-index: 999;
         position: fixed;
@@ -166,7 +173,7 @@
       </div> -->
       <div class="site-navbar">
         <!-- Logo -->
-        <a href="index.html" class="site-logo">
+        <a href="main.html" class="site-logo">
           <img src="img/logo_saswad.png" height="80" alt="" />
 
           <!-- <span style="color: black;">Saaswad</span> -->
@@ -195,7 +202,7 @@
         <!-- Menu -->
         <nav class="site-nav-menu">
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="main.html">Home</a></li>
             <li class="active"><a href="about.html">About us</a></li>
             <li>
               <a href="solutions.php">Products</a>
@@ -258,13 +265,13 @@
     <section id="mission" class="team-section spad">
       <div class="container">
         <div class="team-text">
-          <h2 style="font-weight: bolder">
+          <h1 style="font-weight: bolder">
             Our <span style="color: red">Vision</span>,<span style="color: red">
               Mission</span
             >
             and
             <span style="color: red">Goal</span>
-          </h2>
+          </h1>
           <!-- <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
             orci purus, sodales in est quis, blandit sollicitudin est. Nam
@@ -412,7 +419,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <img src="img/Director.JPG" alt="" />
+            <img src="img/director-homepage.JPG" alt="Directors image" />
           </div>
           <div class="col-lg-6">
             <div class="about-text">
@@ -467,7 +474,7 @@
         <div class="row">
           <div class="col-lg-12 order-1 order-lg-2 p-0">
             <ul class="footer-menu text-center">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="main.html">Home</a></li>
               <li class="active"><a href="about.html">About us</a></li>
               <li><a href="solutions.php">Products</a></li>
               <li><a href="blog.html">Facilities</a></li>
