--- a/industryinc/unit3.html
+++ b/industryinc/unit3.html
@@ -116,7 +116,7 @@
       </div> -->
       <div class="site-navbar">
         <!-- Logo -->
-        <a href="index.html" class="site-logo">
+        <a href="main.html" class="site-logo">
           <img src="img/logo_saswad.png" height="80" alt="" />
 
           <!-- <span style="color: black;">Saaswad</span> -->
@@ -147,7 +147,7 @@
         <!-- Menu -->
         <nav class="site-nav-menu">
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="main.html">Home</a></li>
             <li ><a href="about.html">About us</a></li>
             <li>
               <a href="solutions.php">Products</a>
@@ -255,8 +255,8 @@
    <center>
     <!-- <a href="something" class="button4" style="background-color:#f14e4e">Button 1</a>
     <a href="something" class="button4" style="background-color:#f1bb4e">Button 2</a> -->
-    <!-- <a href="index.html" data-role="button" data-inline="true" style="background-color: red;">Cancel</a>
-<a href="index.html" data-role="button" data-inline="true" data-theme="red">Save</a>
+    <!-- <a href="main.html" data-role="button" data-inline="true" style="background-color: red;">Cancel</a>
+<a href="main.html" data-role="button" data-inline="true" data-theme="red">Save</a>
   </div>
 </center>
 
@@ -270,7 +270,7 @@
         <div class="row">
           <div class="col-lg-12 order-1 order-lg-2 p-0">
             <ul class="footer-menu text-center">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="main.html">Home</a></li>
               <li class="active"><a href="about.html">About us</a></li>
               <li><a href="solutions.php">Products</a></li>
               <li><a href="blog.html">Facilities</a></li>
