--- a/industryinc/elements.html
+++ b/industryinc/elements.html
@@ -93,7 +93,7 @@
         <!-- Menu -->
         <nav class="site-nav-menu">
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="main.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
             <li>
               <a href="solutions.php">Solutions</a>
@@ -590,7 +590,7 @@
             </div>
             <div class="col-lg-7 order-1 order-lg-2 p-0">
               <ul class="footer-menu">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="main.html">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="solutions.php">Solutions</a></li>
                 <li><a href="blog.html">Blog</a></li>
