--- a/industryinc/main.html
+++ b/industryinc/main.html
@@ -3,7 +3,10 @@
   <head>
     <title>Saaswad Heat Transfer And Engineering Pvt Ltd</title>
     <meta charset="UTF-8" />
-    <meta name="description" content="Our company is one of the leading manufacturers of industrial radiators, oil Coolers, heat exchangers etc. We serve India Railways, Cummins ltd etc." />
+    <meta
+      name="description"
+      content="Our company is one of the leading manufacturers of industrial radiators, oil Coolers, heat exchangers etc. We serve India Railways, Cummins ltd etc."
+    />
     <meta name="keywords" content="industry, html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
@@ -49,21 +52,20 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <style>
-      @media only screen and (max-width: 991px) and (min-width: 768px){
-.hero-item h1
- {
-    font-size: 60px;
-}
+      @media only screen and (max-width: 991px) and (min-width: 768px) {
+        .hero-item h1 {
+          font-size: 60px;
+        }
       }
-.hero-item h1 {
-    font-size: 90px;
-    font-weight: 300;
-    color: #fff;
-    margin-bottom: 34px;
-    opacity: 0;
-    top: 50px;
-    position: relative;
-}
+      .hero-item h1 {
+        font-size: 90px;
+        font-weight: 300;
+        color: #fff;
+        margin-bottom: 34px;
+        opacity: 0;
+        top: 50px;
+        position: relative;
+      }
       #scroll {
         z-index: 999;
         position: fixed;
@@ -183,7 +185,7 @@
             <li class="active"><a href="main.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
             <li>
-              <a href="solutions.php">Products</a>
+              <a href="products.php">Products</a>
             </li>
             <li><a href="blog.html">Facilities</a></li>
             <li><a href="contact.php">Contact</a></li>
@@ -272,7 +274,11 @@
               <div class="service-item">
                 <div class="si-head">
                   <!-- <div class="si-icon"> -->
-                  <img src="img/industrial-radiators-homepage.JPG" alt="Industrial Radiators on homepage" height="100px" />
+                  <img
+                    src="img/industrial-radiators-homepage.JPG"
+                    alt="Industrial Radiators on homepage"
+                    height="100px"
+                  />
                   <!-- </div> -->
                   <h5>Industrial Radiators</h5>
                 </div>
@@ -285,7 +291,11 @@
               <div class="service-item">
                 <div class="si-head">
                   <!-- <div class="si-icon"> -->
-                  <img src="img/oil-coolers-homepage.png" alt="Oil Coolers on homepage" height="100px" />
+                  <img
+                    src="img/oil-coolers-homepage.png"
+                    alt="Oil Coolers on homepage"
+                    height="100px"
+                  />
                   <!-- </div> -->
                   <h5>Oil Coolers</h5>
                 </div>
@@ -295,7 +305,11 @@
               <div class="service-item">
                 <div class="si-head">
                   <!-- <div class="si-icon"> -->
-                  <img src="img/heat-exchangers-homepage.png" alt="Heat exchanger on homepage" height="100px" />
+                  <img
+                    src="img/heat-exchangers-homepage.png"
+                    alt="Heat exchanger on homepage"
+                    height="100px"
+                  />
                   <!-- </div> -->
                   <h5>Heat Exchangers</h5>
                 </div>
@@ -305,7 +319,11 @@
               <div class="service-item">
                 <div class="si-head">
                   <!-- <div class="si-icon"> -->
-                  <img src="img/charged-air-coolers-homepage.JPG" alt="Charged Air Coolers on homepage" height="100px" />
+                  <img
+                    src="img/charged-air-coolers-homepage.JPG"
+                    alt="Charged Air Coolers on homepage"
+                    height="100px"
+                  />
                   <!-- </div> -->
                   <h5>Charged Air Coolers</h5>
                 </div>
@@ -371,7 +389,10 @@
 
           <div class="col-lg-4 col-md-12">
             <div class="feature-box">
-              <img src="img/indian-railway-homepage.jpg" alt="Indian Railways served" />
+              <img
+                src="img/indian-railway-homepage.jpg"
+                alt="Indian Railways served"
+              />
               <div class="fb-text">
                 <h5>Indian Railways</h5>
                 <p>
@@ -387,7 +408,10 @@
           </div>
           <div class="col-lg-4 col-md-12">
             <div class="feature-box">
-              <img src="img/cummins-india-homepage.jpg" alt="Cummins India pvt ltd served" />
+              <img
+                src="img/cummins-india-homepage.jpg"
+                alt="Cummins India pvt ltd served"
+              />
               <div class="fb-text">
                 <h5>Cummins India Ltd.</h5>
                 <p>
@@ -404,7 +428,10 @@
           </div>
           <div class="col-lg-4 col-md-12">
             <div class="feature-box">
-              <img src="img/greaves-cotton-homepage.jpg" alt="Greaves Cotton Ltd served" />
+              <img
+                src="img/greaves-cotton-homepage.jpg"
+                alt="Greaves Cotton Ltd served"
+              />
               <div class="fb-text" style="padding-bottom: 16px">
                 <h5>Greaves Cotton Ltd.</h5>
                 <p>
@@ -789,6 +816,5 @@
         });
       });
     </script>
-    
   </body>
 </html>
