--- a/industryinc/coorporate_office.html
+++ b/industryinc/coorporate_office.html
@@ -196,6 +196,19 @@
     <h3 style="margin-bottom: 20px;">
       <center>COORPORATE OFFICE</center>
     </h3>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12" style="text-align: center">
+          <p>
+            It is situated in the oldest city of India - Varanasi . It is a multi-storey working place with a
+            front and a back office with multiple on ground staff. We have two conference rooms and a
+            separate pantry .We have a marketing department as well which helps us to reach out to
+            more people. We have all the facilities which adds teamwork and enthusiasm . We thrive
+            working in an environment that emphasizes community..
+          </p>
+        </div>
+      </div>
+    </div>
     <br>
 
     <div class="map-section">
