--- a/industryinc/unit3.html
+++ b/industryinc/unit3.html
@@ -191,9 +191,24 @@
   </section>
     <br>
     <br>
-    <h3 style="margin-bottom: 20px; " >
+    <h2 style="margin-bottom: 20px; " >
       <center>Varanasi Unit</center>
-    </h3>
+    </h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12" style="text-align: center;">
+          <p>
+            We are situated in the oldest city of India and we have superlative and dedicated
+workmanship . We have a dedicated residential area for the working staff to provide them
+comfort and support at work . We have 42000 sq ft. of land area dedicated for the same .
+Our unit is 16 kms away from DIESEL LOCOMOTIVE WORKS (DLW) . We have well
+trained and experienced staff which helps us reach our production goals on time .We work
+with a passion to create the best quality product for our clients to achieve customer delight.
+          </p>
+  
+        </div>
+      </div>
+    </div>
     <br>
     <div class="map-section">
       <div class="container">
