--- a/industryinc/unit4.html
+++ b/industryinc/unit4.html
@@ -193,6 +193,22 @@
     <h3 style="margin-bottom: 20px">
       <center>Pune Unit</center>
     </h3>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12" style="text-align: center">
+          <p>
+            We are located in the industrial area in Chakan. It helps us because
+            of the easy availability of suppliers which meets our requirements
+            of raw materials and equipment for production. We have state of art
+            testing facilities like Wind Tunnel,Thermal Cycle Test Rig and 3D
+            Vibration Test so that we can provide our customers with the best
+            quality products. We have acquiescent and very supportive staff ,who
+            help us provide the best quality product for our clients to achieve
+            customer delight.
+          </p>
+        </div>
+      </div>
+    </div>
     <br />
     <div class="map-section">
       <div class="container">
