--- a/industryinc/main.html
+++ b/industryinc/main.html
@@ -150,7 +150,7 @@
               <img src="img/icons/phone.png" alt="" class="" />
             </div>
             <div class="hib-text">
-              <h6>+91 9839837999</h6>
+              <h6>+91 8299638409</h6>
               <p>info@saaswad.com</p>
             </div>
           </div>
@@ -260,11 +260,12 @@
               <div class="service-item">
                 <div class="si-head">
                   <!-- <div class="si-icon"> -->
-                  <img
-                    src="img/industrial-radiators-homepage.JPG"
-                    alt="Industrial Radiators on homepage"
-                    height="100px"
-                  />
+                  <a href="./radiator.php"
+                    ><img
+                      src="img/industrial-radiators-homepage.JPG"
+                      alt="Industrial Radiators on homepage"
+                      height="100px"
+                  /></a>
                   <!-- </div> -->
                   <h5>Industrial Radiators</h5>
                 </div>
@@ -277,11 +278,13 @@
               <div class="service-item">
                 <div class="si-head">
                   <!-- <div class="si-icon"> -->
-                  <img
-                    src="img/oil-coolers-homepage.png"
-                    alt="Oil Coolers on homepage"
-                    height="100px"
-                  />
+                  <a href="./acooler.php">
+                    <img
+                      src="img/oil-coolers-homepage.png"
+                      alt="Oil Coolers on homepage"
+                      height="100px"
+                    />
+                  </a>
                   <!-- </div> -->
                   <h5>Oil Coolers</h5>
                 </div>
@@ -291,11 +294,14 @@
               <div class="service-item">
                 <div class="si-head">
                   <!-- <div class="si-icon"> -->
-                  <img
-                    src="img/heat-exchangers-homepage.png"
-                    alt="Heat exchanger on homepage"
-                    height="100px"
-                  />
+                  <a href="./mradiator.php">
+                    <img
+                      src="img/heat-exchangers-homepage.png"
+                      alt="Heat exchanger on homepage"
+                      height="100px"
+                    />
+                  </a>
+
                   <!-- </div> -->
                   <h5>Heat Exchangers</h5>
                 </div>
@@ -305,11 +311,14 @@
               <div class="service-item">
                 <div class="si-head">
                   <!-- <div class="si-icon"> -->
-                  <img
-                    src="img/charged-air-coolers-homepage.JPG"
-                    alt="Charged Air Coolers on homepage"
-                    height="100px"
-                  />
+                  <a href="./tacooler.php">
+                    <img
+                      src="img/charged-air-coolers-homepage.JPG"
+                      alt="Charged Air Coolers on homepage"
+                      height="100px"
+                    />
+                  </a>
+
                   <!-- </div> -->
                   <h5>Charged Air Coolers</h5>
                 </div>
