--- a/industryinc/about.html
+++ b/industryinc/about.html
@@ -17,7 +17,10 @@
       gtag("config", "UA-96171225-3");
     </script>
     <meta charset="UTF-8" />
-    <meta name="description" content="We are one of the leading manufacturers of industrial radiators, oil coolers, heat exchangers and charged air coolers in india. We manufacture quality products." />
+    <meta
+      name="description"
+      content="We are one of the leading manufacturers of industrial radiators, oil coolers, heat exchangers and charged air coolers in india. We manufacture quality products."
+    />
     <meta name="keywords" content="industry, html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -49,12 +52,12 @@
     <![endif]-->
     <style>
       .team-text h1 {
-    font-weight: 300;
-    margin-bottom: 40px;
-}
-h1 {
-    font-size: 38px;
-}
+        font-weight: 300;
+        margin-bottom: 40px;
+      }
+      h1 {
+        font-size: 38px;
+      }
       #scroll {
         z-index: 999;
         position: fixed;
@@ -534,6 +537,11 @@ h1 {
                 </li>
                 <li>
                   <a class="hover1" href="./tacooler.php">Charged Air Cooler</a>
+                </li>
+                <li>
+                  <a class="hover1" href="./mbradiator.php"
+                    >Mechanically Bonded Radiators</a
+                  >
                 </li>
                 <!-- <li><a href="">Oil Extractions</a></li>
                 <li><a href="">About our Work</a></li> -->
