--- a/industryinc/unit3.html
+++ b/industryinc/unit3.html
@@ -197,7 +197,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12" style="text-align: center;">
-          <p>
+          <p style="font-size: large;">
             We are situated in the oldest city of India and we have superlative and dedicated
 workmanship . We have a dedicated residential area for the working staff to provide them
 comfort and support at work . We have 42000 sq ft. of land area dedicated for the same .
@@ -346,6 +346,11 @@ with a passion to create the best quality product for our clients to achieve cus
                 <li>
                   <a class="hover1" href="./tacooler.php"
                     >Charged Air Cooler</a
+                  >
+                </li>
+                <li>
+                  <a class="hover1" href="./mbradiator.php"
+                    >Mechanically Bonded Radiators</a
                   >
                 </li>
                 <!-- <li><a href="">Oil Extractions</a></li>
