--- a/industryinc/coorporate_office.html
+++ b/industryinc/coorporate_office.html
@@ -199,12 +199,12 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12" style="text-align: center">
-          <p>
+          <p style="font-size: large;">
             It is situated in the oldest city of India - Varanasi . It is a multi-storey working place with a
             front and a back office with multiple on ground staff. We have two conference rooms and a
             separate pantry .We have a marketing department as well which helps us to reach out to
             more people. We have all the facilities which adds teamwork and enthusiasm . We thrive
-            working in an environment that emphasizes community..
+            working in an environment that emphasizes community.
           </p>
         </div>
       </div>
@@ -349,6 +349,11 @@
                 <li>
                   <a class="hover1" href="./tacooler.php"
                     >Charged Air Cooler</a
+                  >
+                </li>
+                <li>
+                  <a class="hover1" href="./mbradiator.php"
+                    >Mechanically Bonded Radiators</a
                   >
                 </li>
                 <!-- <li><a href="">Oil Extractions</a></li>
