--- a/industryinc/main.html
+++ b/industryinc/main.html
@@ -313,7 +313,7 @@
                   <!-- <div class="si-icon"> -->
                   <a href="./tacooler.php">
                     <img
-                      src="img/charged-air-coolers-homepage.JPG"
+                      src="img/newimage2.png"
                       alt="Charged Air Coolers on homepage"
                       height="100px"
                     />
@@ -690,6 +690,11 @@
                 </li>
                 <li>
                   <a class="hover1" href="./tacooler.php">Charged Air Cooler</a>
+                </li>
+                <li>
+                  <a class="hover1" href="./mbradiator.php"
+                    >Mechanically Bonded Radiators</a
+                  >
                 </li>
                 <!-- <li><a href="">Oil Extractions</a></li>
                 <li><a href="">About our Work</a></li> -->
