--- a/industryinc/unit4.html
+++ b/industryinc/unit4.html
@@ -196,7 +196,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12" style="text-align: center">
-          <p>
+          <p style="font-size: large">
             We are located in the industrial area in Chakan. It helps us because
             of the easy availability of suppliers which meets our requirements
             of raw materials and equipment for production. We have state of art
@@ -344,6 +344,11 @@
                 </li>
                 <li>
                   <a class="hover1" href="./tacooler.php">Charged Air Cooler</a>
+                </li>
+                <li>
+                  <a class="hover1" href="./mbradiator.php"
+                    >Mechanically Bonded Radiators</a
+                  >
                 </li>
                 <!-- <li><a href="">Oil Extractions</a></li>
                 <li><a href="">About our Work</a></li> -->
