--- a/industryinc/blog.html
+++ b/industryinc/blog.html
@@ -122,7 +122,6 @@
         border-width: medium;
       }
       img.new4 {
-        margin-top: 130px;
         border-color: red;
         border-style: solid;
         border-width: medium;
@@ -973,8 +972,8 @@
               >
                 <img class="new4" src="img/facility6.JPG" alt="" width="300" />
                 <img class="new4" src="img/facility7.JPG" alt="" width="300" />
-                <img src="img/facility8.JPG" alt="" width="300" />
-                <img src="img/facility9.JPG" alt="" width="300" />
+                <img class="new4" src="img/facility8.JPG" alt="" width="300" />
+                <img class="new4" src="img/facility9.JPG" alt="" width="300" />
                 <h4 style="color: white; margin-top: 50px">
                   ADDITIONAL FACILITIES
                 </h4>
